--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
     - git clone git://github.com/pkgcore/pkgcore.git pkgcore-lib
     - pushd pkgcore-lib
     - python setup.py build_ext -I "${VIRTUAL_ENV}"/include
-    - python setup.py install
+    - python setup.py install --disable-man-pages --disable-html-docs
     - popd
 script:
     - python setup.py test
