--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ python:
     - 2.7
     - 3.3
     - 3.4
+before_install:
+    # add user/group for portage and wheel
+    - sudo groupadd wheel
+    - sudo groupadd -g 250 portage
+    - sudo useradd -u 250 -g 250 portage
 install:
     - git clone git://github.com/pkgcore/snakeoil.git
     - pushd snakeoil
