tox: slightly simplify snakeoil installation

--- a/tox.ini
+++ b/tox.ini
@@ -10,12 +10,9 @@ deps =
 	mock
 	coverage>3.9
 commands =
+	pip install https://github.com/pkgcore/snakeoil/archive/master.tar.gz --install-option="--install-headers={envdir}/include/snakeoil"
 	bash -c '\
-		[[ -d {toxworkdir}/snakeoil ]] || ( mkdir "{toxworkdir}/snakeoil" && wget -O - https://github.com/pkgcore/snakeoil/archive/master.tar.gz | tar -xz --strip-components=1 -C "{toxworkdir}/snakeoil" ) && \
 		[[ -d {toxworkdir}/pkgcore ]] || ( mkdir "{toxworkdir}/pkgcore" && wget -O - https://github.com/pkgcore/pkgcore/archive/master.tar.gz | tar -xz --strip-components=1 -C "{toxworkdir}/pkgcore" ) && \
-		pushd "{toxworkdir}/snakeoil" >/dev/null && \
-		python setup.py build_ext -I {envdir}/include build -b {envdir}/build install --install-headers "{envdir}/include/snakeoil" && \
-		popd >/dev/null && \
 		pushd "{toxworkdir}/pkgcore" >/dev/null && \
 		python setup.py build_ext -I {envdir}/include build -b {envdir}/build --disable-man-pages --disable-html-docs install --disable-man-pages --disable-html-docs && \
 		popd >/dev/null && \
