tox: bump coverage version

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ skip_install = True
 deps =
 	pytest
 	mock
-	coverage>3.9
+	coverage>=4.0a1
 commands =
 	pip install https://github.com/pkgcore/snakeoil/archive/master.tar.gz --install-option="--install-headers={envdir}/include/snakeoil"
 	bash -c '\
