travis-ci: force <tox-2 to be installed
tox>=2 is broken in certain cases for various documented dir
substitutions (see
https://bitbucket.org/hpk42/tox/issue/246/envbindir-substitution-key-not-found).

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
     - sudo groupadd wheel
     - sudo groupadd -g 250 portage
     - sudo useradd -u 250 -g 250 portage
-install: pip install tox coveralls
+install: pip install 'tox<2' coveralls
 script: tox -e py${TRAVIS_PYTHON_VERSION/\./}
 after_success:
     # upload coverage data to coveralls.io
