tox: simplify installing snakeoil and pkgcore

--- a/tox.ini
+++ b/tox.ini
@@ -9,13 +9,11 @@ deps =
 	pytest
 	mock
 	coverage>=4.0a1
+	https://github.com/pkgcore/snakeoil/archive/master.tar.gz
 commands =
-	pip install https://github.com/pkgcore/snakeoil/archive/master.tar.gz --install-option="--install-headers={envdir}/include/snakeoil"
+	# can't add to deps yet because its setup.py script deps on snakeoil
+	pip install https://github.com/pkgcore/pkgcore/archive/master.tar.gz
 	bash -c '\
-		[[ -d {toxworkdir}/pkgcore ]] || ( mkdir "{toxworkdir}/pkgcore" && wget -O - https://github.com/pkgcore/pkgcore/archive/master.tar.gz | tar -xz --strip-components=1 -C "{toxworkdir}/pkgcore" ) && \
-		pushd "{toxworkdir}/pkgcore" >/dev/null && \
-		python setup.py build_ext -I {envdir}/include build -b {envdir}/build --disable-man-pages --disable-html-docs install --disable-man-pages --disable-html-docs && \
-		popd >/dev/null && \
 		python setup.py build -b "{envdir}/build" install && \
 		cp .coveragerc "{envsitepackagesdir}" && \
 		pushd "{envsitepackagesdir}" >/dev/null && \
