tox: toss the bash hacks from the command list
They're unneeded now that installing via pip should work.

--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,12 @@
 envlist = py27, py33, py34
 skipsdist = True
 [testenv]
-whitelist_externals = bash
-# need to install manually using setup.py for now
+whitelist_externals = cp
+# need to install manually for now
 skip_install = True
+changedir = {envsitepackagesdir}
+setenv =
+	PYTHONPATH = {envsitepackagesdir}
 deps =
 	pytest
 	mock
@@ -13,11 +16,8 @@ deps =
 commands =
 	# can't add to deps yet because its setup.py script deps on snakeoil
 	pip install https://github.com/pkgcore/pkgcore/archive/master.tar.gz
-	bash -c '\
-		python setup.py build -b "{envdir}/build" install && \
-		cp .coveragerc "{envsitepackagesdir}" && \
-		pushd "{envsitepackagesdir}" >/dev/null && \
-		coverage run -m py.test {posargs:pkgcheck/test} && \
-		coverage report && \
-		coverage html -d "{envdir}/coverage" && \
-		popd >/dev/null'
+	pip install -I "{toxinidir}"
+	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
+	coverage run -m py.test {posargs:pkgcheck/test}
+	coverage report
+	coverage html -d "{envdir}/coverage"
