travis-ci: sync over various test procedure updates from pkgcore

--- a/tox.ini
+++ b/tox.ini
@@ -10,14 +10,16 @@ setenv =
 	PYTHONPATH = {envsitepackagesdir}
 deps =
 	pytest
+	pytest-xdist
+	pytest-cov
 	mock
-	coverage>=4.0a1
 	https://github.com/pkgcore/snakeoil/archive/master.tar.gz
 commands =
 	# can't add to deps yet because its setup.py script deps on snakeoil
 	pip install https://github.com/pkgcore/pkgcore/archive/master.tar.gz
 	pip install -I "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
-	coverage run -m py.test {posargs:pkgcheck/test}
-	coverage report
-	coverage html -d "{envdir}/coverage"
+	py.test {posargs:-n 4 --cov pkgcheck pkgcheck/test}
+
+# stub for travis-ci python nightly tests
+[testenv:pynightly]
