--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,21 @@
 language: python
 python:
-    - 2.7
-    - 3.3
-    - 3.4
+  - 2.7
+  - 3.3
+  - 3.4
+  - nightly
+matrix:
+  fast_finish: true
+  allow_failures:
+    - python: nightly
 sudo: false
+cache:
+  directories:
+    - $HOME/.cache/pip
 install: pip install 'tox<2' coveralls
 script: tox -e py${TRAVIS_PYTHON_VERSION/\./}
 after_success:
-    # upload coverage data to coveralls.io
-    - pushd .tox/py${TRAVIS_PYTHON_VERSION/\./}/lib/python*/site-packages
-    - coveralls
-    - popd
+  # upload coverage data to coveralls.io
+  - pushd .tox/py${TRAVIS_PYTHON_VERSION/\./}/lib/python*/site-packages
+  - coveralls
+  - popd
