use subtree-ed pkgdist module instead of snakeoil

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include AUTHORS BSD GPL2 LICENSE TODO *.rst
 include tox.ini .coveragerc
 recursive-include bin *
+recursive-include pkgdist *
 global-exclude *.pyc *.pyo __pycache__
