tox: use requirements.txt to list snakeoil and pkgcore deps

--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,7 @@ deps =
 	pytest-xdist
 	pytest-cov
 	mock
-	https://github.com/pkgcore/snakeoil/archive/master.tar.gz
-	https://github.com/pkgcore/pkgcore/archive/master.tar.gz
+	-rrequirements.txt
 commands =
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov pkgcheck pkgcheck/test}
