--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include AUTHORS BSD GPL2 LICENSE TODO *.rst
-include tox.ini .coveragerc
+include requirements.txt tox.ini .coveragerc
 recursive-include bin *
 recursive-include pkgdist *
 global-exclude *.pyc *.pyo __pycache__
