--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist = py27, py33, py34
+skipsdist = True
 [testenv]
 whitelist_externals = cp
 changedir = {envsitepackagesdir}
@@ -12,6 +13,7 @@ deps =
 	mock
 	-rrequirements.txt
 commands =
+	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov pkgcheck pkgcheck/test}
 
