tox: workaround setuptools limitation
It appears multiple layers of setup_requires deps don't work quite right
in that snakeoil isn't being installed before the pkgcore setup script
is run so the process errors out with an ImportError.

--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,9 @@ deps =
 	pytest-xdist
 	pytest-cov
 	mock
-	-rrequirements.txt
 commands =
+	pip install https://github.com/pkgcore/snakeoil/archive/master.tar.gz
+	pip install https://github.com/pkgcore/pkgcore/archive/master.tar.gz
 	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov pkgcheck pkgcheck/test}
