--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,14 @@ commands =
 	pip install https://github.com/pkgcore/pkgcore/archive/master.tar.gz
 	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
-	py.test {posargs:-n 4 --cov pkgcheck pkgcheck/test}
+	py.test {posargs:-n 4 --cov-report html --cov pkgcheck pkgcheck/test}
 
-# stub for travis-ci python nightly tests
-[testenv:pynightly]
+# stub for travis-ci
+[testenv:travis]
+commands =
+	pip install https://github.com/pkgcore/snakeoil/archive/master.tar.gz
+	pip install https://github.com/pkgcore/pkgcore/archive/master.tar.gz
+	pip install "{toxinidir}"
+	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
+	py.test {posargs:-n 4 --cov-report xml --cov pkgcheck pkgcheck/test}
+	cp coverage.xml "{toxinidir}"
