setup: bundle distutils extensions to simplify initial setup env
Mostly so snakeoil isn't required in order to run setup.py initially.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include AUTHORS BSD GPL2 LICENSE TODO *.rst
+include AUTHORS BSD GPL2 LICENSE TODO *.py *.rst
 include tox.ini .coveragerc
 recursive-include bin *
 global-exclude *.pyc *.pyo __pycache__
