--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,9 @@
 envlist = py27, py33, py34
 skipsdist = True
 [testenv]
-whitelist_externals = cp
+whitelist_externals =
+	cp
+	mv
 changedir = {envsitepackagesdir}
 setenv =
 	PYTHONPATH = {envsitepackagesdir}
@@ -17,6 +19,7 @@ commands =
 	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov-report html --cov pkgcheck pkgcheck/test}
+	mv "{envsitepackagesdir}"/htmlcov "{envdir}"
 
 # stub for travis-ci
 [testenv:travis]
@@ -25,5 +28,4 @@ commands =
 	pip install https://github.com/pkgcore/pkgcore/archive/master.tar.gz
 	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
-	py.test {posargs:-n 4 --cov-report xml --cov pkgcheck pkgcheck/test}
-	cp coverage.xml "{toxinidir}"
+	py.test {posargs:-n 4 --cov-report= --cov pkgcheck pkgcheck/test}
