docs: copy pkgcore's doc building setup

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,6 +1,9 @@
 # Makefile for Sphinx documentation
 #
 
+# which python version to use; overridable from the commandline.
+PYTHONPATH    = ../
+PYTHON        = python
 # You can set these variables from the command line.
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
@@ -20,6 +23,7 @@ PAPEROPT_letter = -D latex_paper_size=letter
 ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 # the i18n builder cannot share the environment and doctrees with the others
 I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
+export PYTHONPATH
 
 .PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest gettext
 
@@ -52,6 +56,7 @@ clean:
 	-rm -rf $(BUILDDIR) api generated *.pyc
 
 html:
+	$(PYTHON) -m snakeoil.dist.generate_docs --html ../ pkgcheck
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
@@ -130,6 +135,7 @@ text:
 	@echo "Build finished. The text files are in $(BUILDDIR)/text."
 
 man:
+	$(PYTHON) -m snakeoil.dist.generate_docs --man ../ pkgcheck
 	$(SPHINXBUILD) -b man $(ALLSPHINXOPTS) $(BUILDDIR)/man
 	@echo
 	@echo "Build finished. The manual pages are in $(BUILDDIR)/man."
