--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ skipsdist = True
 whitelist_externals =
 	cp
 	mv
+	rm
 changedir = {envsitepackagesdir}
 setenv =
 	PYTHONPATH = {envsitepackagesdir}
@@ -19,6 +20,7 @@ commands =
 	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov-report html --cov pkgcheck pkgcheck/test}
+	rm -rf "{envdir}"/htmlcov
 	mv "{envsitepackagesdir}"/htmlcov "{envdir}"
 
 # stub for travis-ci
