tox: move snakeoil/pkgcore deps to external requirements.txt

--- a/tox.ini
+++ b/tox.ini
@@ -14,9 +14,8 @@ deps =
 	pytest-xdist
 	pytest-cov
 	mock
+	-rrequirements.txt
 commands =
-	pip install https://github.com/pkgcore/snakeoil/archive/master.tar.gz
-	pip install https://github.com/pkgcore/pkgcore/archive/master.tar.gz
 	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov-report html --cov pkgcheck pkgcheck/test}
@@ -26,8 +25,6 @@ commands =
 # stub for travis-ci
 [testenv:travis]
 commands =
-	pip install https://github.com/pkgcore/snakeoil/archive/master.tar.gz
-	pip install https://github.com/pkgcore/pkgcore/archive/master.tar.gz
 	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov-report= --cov pkgcheck pkgcheck/test}
