tox: add doc target to test html doc and man page builds

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,17 @@ commands =
 	rm -rf "{envdir}"/htmlcov
 	mv "{envsitepackagesdir}"/htmlcov "{envdir}"
 
+[testenv:doc]
+whitelist_externals = make
+changedir = {toxinidir}
+setenv =
+	PYTHONPATH = {envsitepackagesdir}
+deps =
+	sphinx
+	-rrequirements.txt
+commands =
+	make -C doc {posargs:man html}
+
 # stub for travis-ci
 [testenv:travis]
 commands =
