coverage: ignore unexecutable code

--- a/.coveragerc
+++ b/.coveragerc
@@ -7,9 +7,12 @@ omit = pkgcheck/test/*
 show_missing = True
 skip_covered = True
 exclude_lines =
-	# Have to re-enable the standard pragma
+	# re-enable the standard pragma
 	pragma: no cover
 
-	# Don't complain if tests don't hit defensive assertion code
+	# ignore defensive assertions
 	raise AssertionError
 	raise NotImplementedError
+
+	# ignore unexecutable code
+	if __name__ == .__main__.:
