--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,7 @@ envlist = py27, py34, py35
 skipsdist = True
 [testenv]
 whitelist_externals =
-	cp
-	mv
-	rm
+	ln
 changedir = {envsitepackagesdir}
 setenv =
 	PYTHONPATH = {envsitepackagesdir}
@@ -17,10 +15,9 @@ deps =
 	-rrequirements.txt
 commands =
 	pip install "{toxinidir}"
-	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
+	ln -sfn "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov-report html --cov pkgcheck pkgcheck/test}
-	rm -rf "{envdir}"/htmlcov
-	mv "{envsitepackagesdir}"/htmlcov "{envdir}"
+	ln -sfn "{envsitepackagesdir}"/htmlcov "{envdir}"
 
 [testenv:doc]
 whitelist_externals = make
@@ -37,5 +34,5 @@ commands =
 [testenv:travis]
 commands =
 	pip install "{toxinidir}"
-	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
+	ln -sfn "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov-report= --cov pkgcheck pkgcheck/test}
