--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,7 @@
 envlist = py27, py34, py35
 skipsdist = True
 [testenv]
-whitelist_externals =
-	ln
+whitelist_externals = ln
 changedir = {envsitepackagesdir}
 setenv =
 	PYTHONPATH = {envsitepackagesdir}
