--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,27 @@ python:
   - 3.4
   - 3.5
   - 3.6
-sudo: false
+env:
+  global:
+    - secure: "op74khJo1E0o61WM0KI6VttaZBZR3mhRzndhs0fJS87fpB1VbLgx7XFDw7oho+EwDrbJYqudFGBKF86wyUplNfiM8ovu6xAT6MaBGmmnuLIT2o41fMofS/b3DSs+GjaENzRI23UCNCT9eTJLBXkmwYo8vhzd/NZ3UOTdc1VZq/A="
+    - secure: "UjpnoaH0vkNr6P9YfSWU1MWqXXQgxe56il4jheVKmoK+V0uepSsKynacVy8Qg6Lx4CNJWzBSA/xtILwBOhj/pKeP7dhCWWdbrOLH6++VZDZmDk+32OY9fCClroKujfv9McMH8la9ZWk76pnOsDjfQ1Q19wfyAtPLftoHSy11MJU="
+    - CIBW_PLATFORM=linux
+    - CIBW_SKIP="cp26-* cp33-*"
+    - CIBW_BEFORE_BUILD="{pip} install -r requirements.txt"
+sudo: required
+services:
+  - docker
 cache:
   directories:
     - $HOME/.cache/pip
 install:
   - pip install --upgrade pip
   - pip install --only-binary ":all:" tox codecov
-script: tox -e travis
+  - pip install -r requirements.txt
+before_script: git clone https://github.com/pkgcore/pkgdist.git
+script:
+  - tox -e travis
+  - pkgdist/build-dist-files.sh
 after_success:
   # upload coverage data
   - pushd .tox/travis/lib/python*/site-packages
