travis-ci: make sure to run pplugincache to create plugin cache

--- a/tox.ini
+++ b/tox.ini
@@ -34,5 +34,6 @@ commands =
 [testenv:travis]
 commands =
 	pip install "{toxinidir}"
+	pplugincache -q pkgcheck.plugins
 	ln -sfn "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov-report= --cov pkgcheck pkgcheck/test}
