tox: use --cov-config to specify coveragerc instead of symlinking

--- a/tox.ini
+++ b/tox.ini
@@ -9,14 +9,13 @@ setenv =
 deps =
 	pytest
 	pytest-xdist
-	pytest-cov
+	pytest-cov>=2.5.1
 	mock
 	-rrequirements.txt
 commands =
 	pip install "{toxinidir}"
 	pplugincache -q pkgcheck.plugins
-	ln -sfn "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
-	py.test {posargs:-n 4 --cov-report html --cov pkgcheck pkgcheck/test}
+	py.test {posargs:-n 4 --cov-report html --cov pkgcheck --cov-config "{toxinidir}/.coveragerc" pkgcheck/test}
 	ln -sfn "{envsitepackagesdir}"/htmlcov "{envdir}"
 
 [testenv:doc]
@@ -35,5 +34,4 @@ commands =
 commands =
 	pip install "{toxinidir}"
 	pplugincache -q pkgcheck.plugins
-	ln -sfn "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
-	py.test {posargs:-n 4 --cov-report= --cov pkgcheck pkgcheck/test}
+	py.test {posargs:-n 4 --cov-report= --cov pkgcheck --cov-config "{toxinidir}/.coveragerc" pkgcheck/test}
