--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
 	pytest-xdist
 	pytest-cov>=2.5.1
 	mock
-	-rrequirements.txt
+	-rrequirements/release.txt
 commands =
 	pip install "{toxinidir}"
 	pplugincache -q pkgcheck.plugins
@@ -25,7 +25,7 @@ setenv =
 	PYTHONPATH = {envsitepackagesdir}
 deps =
 	sphinx
-	-rrequirements.txt
+	-rrequirements/release.txt
 commands =
 	make -C doc {posargs:man html}
 
