--- a/tox.ini
+++ b/tox.ini
@@ -1,37 +1,29 @@
 [tox]
-envlist = py27, py34, py35, py36
-skipsdist = True
+envlist = py27, py34, py35, py36, coverage-report
 [testenv]
-whitelist_externals = ln
-changedir = {envsitepackagesdir}
-setenv =
-	PYTHONPATH = {envsitepackagesdir}
 deps =
-	pytest
-	pytest-xdist
-	pytest-cov>=2.5.1
-	mock
-	-rrequirements/release.txt
+	-rrequirements/build.txt
+	-rrequirements/install.txt
+	-rrequirements/tox.txt
 commands =
-	pip install "{toxinidir}"
-	pplugincache -q pkgcheck.plugins
-	py.test {posargs:-n 4 --cov-report html --cov pkgcheck --cov-config "{toxinidir}/.coveragerc" pkgcheck/test}
-	ln -sfn "{envsitepackagesdir}"/htmlcov "{envdir}"
+	coverage run --parallel -m pytest {posargs:-v} "{envsitepackagesdir}"/pkgcheck
 
-[testenv:doc]
-whitelist_externals = make
-changedir = {toxinidir}
-setenv =
-	PYTHONPATH = {envsitepackagesdir}
-deps =
-	sphinx
-	-rrequirements/release.txt
+# generate coverage report
+[testenv:coverage-report]
+deps = coverage
+skip_install = true
 commands =
-	make -C doc {posargs:man html}
+	coverage combine
+	coverage report
+
+# build docs
+[testenv:docs]
+deps =
+	-rrequirements/docs.txt
+commands =
+	python setup.py build_man build_docs
 
 # stub for travis-ci
 [testenv:travis]
 commands =
-	pip install "{toxinidir}"
-	pplugincache -q pkgcheck.plugins
-	py.test {posargs:-n 4 --cov-report= --cov pkgcheck --cov-config "{toxinidir}/.coveragerc" pkgcheck/test}
+	coverage run --parallel -m pytest {posargs:-v} "{envsitepackagesdir}"/pkgcheck
