--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ jobs:
         - git clone https://github.com/pkgcore/pkgdist.git
         - cp -av pkgdist/requirements/* requirements/
       script: pkgdist/build-dist-files.sh
+      after_success:
 
     # push tarball to github
     - stage: deploy
@@ -53,6 +54,7 @@ jobs:
         - cp -av pkgdist/requirements/* requirements/
         - pip install -r requirements/docs.txt
       script: python setup.py sdist
+      after_success:
       deploy:
         provider: releases
         api_key:
