--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,15 @@ python:
   - 3.4
   - 3.5
   - 3.6
+  - 3.7-dev
+matrix:
+  fast_finish: true
+  allow_failures:
+  - python: 3.7-dev
 cache:
+  pip: true
   directories:
-    - "$HOME/.cache/pip"
+    - $HOME/downloads
 install:
   - pip install -U pip
 before_script:
@@ -20,11 +26,10 @@ after_success:
   - codecov
 
 stages:
-  - test
+  - name: test
+    if: NOT branch IN (lint, deploy)
   - name: deploy
-    if: branch = master
-    if: type IN (push, api)
-    if: tag IS present
+    if: (type IN (api, cron)) OR (branch IN (travis-ci, deploy)) OR (branch = master AND type IN (push, api) AND tag IS present)
 
 jobs:
   include:
@@ -39,7 +44,8 @@ jobs:
         - secure: FmQEUPLe9lBG5rT7qkrPwZsOyULX3pmKgru4bC3ZrST6ibCaAmT/TfLZ/XqHrvGeaP0vKu7daqlgrpbIkzBfxeJ+UZYL4T5F2yTLSgoigs4mGaDgt3zZvuzGEffJV+drgQVuHeEBKtT+f3BQ1UnLTKREjgRgwbIVmQ6GHKxwU1s=
         - CIBW_PLATFORM=linux
         - CIBW_SKIP="cp26-* cp33-*"
-        - CIBW_BEFORE_BUILD="{pip} install -r requirements/wheel.txt"
+        - CIBW_BEFORE_BUILD="{pip} install -r requirements/wheel.txt -r requirements/test.txt"
+        - CIBW_TEST_COMMAND="py.test --pyargs snakeoil"
       before_script:
         - git clone https://github.com/pkgcore/pkgdist.git
         - cp -R pkgdist/requirements/* requirements/
@@ -54,13 +60,13 @@ jobs:
         - cp -R pkgdist/requirements/* requirements/
         - pip install -r requirements/sdist.txt
       script: python setup.py sdist
-      after_success:
+      after_success: tar -ztf dist/*.tar.gz | sort
       deploy:
         provider: releases
         api_key:
           secure: LiWvebihdlkZ2nc0psCyLYcaGU3y2UehddndYYquYgDnKSGrpWo6uF2vg+YXzdEMeDc2BaEDrcu9OwUaCbXTuO2f2YPq9lom4GRDY1lD9kJBKXuAAArRzysijbd7HEEg119FLzkOvbHC1XW0Bi/mV37IHQ7pP2KU1rnbY5Ltby4=
         file_glob: true
-        file: dist/pkgcheck-*.tar.gz
+        file: dist/*.tar.gz
         skip_cleanup: true
         on:
           tags: true
