--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ install_command = "{toxinidir}"/requirements/pip.sh {packages}
 deps =
 	-rrequirements/tox.txt
 commands =
-	coverage run --parallel -m pytest {posargs:-v} "{envsitepackagesdir}"/pkgcheck
+	coverage run -p -m pytest {posargs:-v} "{envsitepackagesdir}"/pkgcheck
 
 # generate coverage report
 [testenv:coverage-report]
@@ -39,9 +39,9 @@ deps =
 	-rrequirements/dev.txt
 	-rrequirements/tox.txt
 commands =
-	coverage run --parallel -m pytest {posargs:-v} "{envsitepackagesdir}"/pkgcore
+	coverage run -p -m pytest {posargs:-v} "{envsitepackagesdir}"/pkgcheck
 
 # stub for travis-ci
 [testenv:travis]
 commands =
-	coverage run --parallel -m pytest {posargs:-v} "{envsitepackagesdir}"/pkgcheck
+	coverage run -p -m pytest {posargs:-v} "{envsitepackagesdir}"/pkgcheck
