--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ jobs:
         - CIBW_PLATFORM=linux
         - CIBW_SKIP="cp26-* cp33-*"
         - CIBW_BEFORE_BUILD="{pip} install -r requirements/wheel.txt -r requirements/test.txt"
-        - CIBW_TEST_COMMAND="py.test --pyargs snakeoil"
+        - CIBW_TEST_COMMAND="py.test --pyargs pkgcheck"
       before_script:
         - git clone https://github.com/pkgcore/pkgdist.git
         - cp -R pkgdist/requirements/* requirements/
