--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-envlist = py27, py34, py35, py36, coverage-report
+envlist = py36, coverage-report
 [testenv]
 install_command = "{toxinidir}"/requirements/pip.sh {packages}
 deps =
 	-rrequirements/tox.txt
 commands =
-	coverage run -p -m pytest {posargs:-v} "{envsitepackagesdir}"/pkgcheck
+	coverage run -p -m pytest {posargs:-v}
 
 # generate coverage report
 [testenv:coverage-report]
@@ -41,9 +41,9 @@ deps =
 	-rrequirements/dev.txt
 	-rrequirements/tox.txt
 commands =
-	coverage run -p -m pytest {posargs:-v} "{envsitepackagesdir}"/pkgcheck
+	coverage run -p -m pytest {posargs:-v}
 
 # stub for travis-ci
 [testenv:travis]
 commands =
-	coverage run -p -m pytest {posargs:-v} "{envsitepackagesdir}"/pkgcheck
+	coverage run -p -m pytest {posargs:-v}
