--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,4 @@
 language: python
-python:
-  - 3.6
-  - 3.7-dev
-matrix:
-  fast_finish: true
-  allow_failures:
-  - python: 3.7-dev
 cache:
   pip: true
   directories:
@@ -27,6 +20,14 @@ stages:
     if: NOT branch IN (lint, deploy)
   - name: deploy
     if: (type = api) OR (branch = deploy) OR (branch = master AND type IN (push, api) AND tag IS present)
+
+matrix:
+  include:
+    - python: 3.6
+    - python: 3.7
+      dist: xenial
+      sudo: true
+  fast_finish: true
 
 jobs:
   include:
