--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ jobs:
     - secure: Y94kVKSbboNJnFK6UGL2BKWLtbN692tCl0prYh4Ivq5taHET5Phi9TRKA64AaXXndxNqLk8ALoMuQDsJcpXjYGQjK7aM6VXOTLHjIhE0d2kJuC+ibhm04MhUhG4PrbOMJLg6jqS11fSLeqy/CkawzOVcia6ACV3aB44uTnu79g0=
     - secure: FmQEUPLe9lBG5rT7qkrPwZsOyULX3pmKgru4bC3ZrST6ibCaAmT/TfLZ/XqHrvGeaP0vKu7daqlgrpbIkzBfxeJ+UZYL4T5F2yTLSgoigs4mGaDgt3zZvuzGEffJV+drgQVuHeEBKtT+f3BQ1UnLTKREjgRgwbIVmQ6GHKxwU1s=
     - CIBW_PLATFORM=linux
-    - CIBW_SKIP="cp26-* cp27-* cp33-* cp34-* cp35-*"
+    - CIBW_BUILD="cp36-* cp37-*"
     - CIBW_BEFORE_BUILD="{pip} install -r requirements/wheel.txt -r requirements/test.txt"
     - CIBW_TEST_COMMAND="py.test {project}/tests"
     before_script:
