--- a/.travis.yml
+++ b/.travis.yml
@@ -1,68 +1,65 @@
 dist: xenial
 language: python
+python:
+- 3.6
+- 3.7
 cache:
   pip: true
   directories:
-    - $HOME/downloads
+  - $HOME/downloads
+
 install:
-  - pip install -U pip
+- pip install -U pip
 before_script:
-  - git clone https://github.com/pkgcore/pkgdist.git
-  - cp -R pkgdist/requirements/* requirements/
-  - requirements/pip.sh -rrequirements/ci.txt
+- git clone https://github.com/pkgcore/pkgdist.git
+- cp -R pkgdist/requirements/* requirements/
+- requirements/pip.sh -rrequirements/ci.txt
 script: tox -e travis
 after_success:
-  # upload coverage data
-  - tox -e coverage-report
-  - codecov
+# upload coverage data
+- tox -e coverage-report
+- codecov
 
 stages:
   - name: test
     if: NOT branch IN (lint, deploy)
   - name: deploy
-    if: (type = api) OR (branch = deploy) OR (branch = master AND type IN (push, api) AND tag IS present)
-
-matrix:
-  include:
-    - python: 3.6
-    - python: 3.7
-  fast_finish: true
+    if: (type = api) OR (branch = deploy) OR (tag IS present)
 
 jobs:
-  # push tarball and wheels to pypi
-  - stage: deploy
-    python: 3.6
-    sudo: required
-    services:
-    - docker
-    env:
-    - secure: Y94kVKSbboNJnFK6UGL2BKWLtbN692tCl0prYh4Ivq5taHET5Phi9TRKA64AaXXndxNqLk8ALoMuQDsJcpXjYGQjK7aM6VXOTLHjIhE0d2kJuC+ibhm04MhUhG4PrbOMJLg6jqS11fSLeqy/CkawzOVcia6ACV3aB44uTnu79g0=
-    - secure: FmQEUPLe9lBG5rT7qkrPwZsOyULX3pmKgru4bC3ZrST6ibCaAmT/TfLZ/XqHrvGeaP0vKu7daqlgrpbIkzBfxeJ+UZYL4T5F2yTLSgoigs4mGaDgt3zZvuzGEffJV+drgQVuHeEBKtT+f3BQ1UnLTKREjgRgwbIVmQ6GHKxwU1s=
-    - CIBW_PLATFORM=linux
-    - CIBW_BUILD="cp36-* cp37-*"
-    - CIBW_BEFORE_BUILD="{pip} install -r requirements/wheel.txt -r requirements/test.txt"
-    - CIBW_TEST_COMMAND="py.test {project}/tests"
-    before_script:
-    - git clone https://github.com/pkgcore/pkgdist.git
-    - cp -R pkgdist/requirements/* requirements/
-    script: pkgdist/build-dist-files.sh
-    after_success:
+  include:
+    # push tarball and wheels to pypi
+    - stage: deploy
+      sudo: required
+      services:
+      - docker
+      env:
+      - secure: Y94kVKSbboNJnFK6UGL2BKWLtbN692tCl0prYh4Ivq5taHET5Phi9TRKA64AaXXndxNqLk8ALoMuQDsJcpXjYGQjK7aM6VXOTLHjIhE0d2kJuC+ibhm04MhUhG4PrbOMJLg6jqS11fSLeqy/CkawzOVcia6ACV3aB44uTnu79g0=
+      - secure: FmQEUPLe9lBG5rT7qkrPwZsOyULX3pmKgru4bC3ZrST6ibCaAmT/TfLZ/XqHrvGeaP0vKu7daqlgrpbIkzBfxeJ+UZYL4T5F2yTLSgoigs4mGaDgt3zZvuzGEffJV+drgQVuHeEBKtT+f3BQ1UnLTKREjgRgwbIVmQ6GHKxwU1s=
+      - CIBW_PLATFORM=linux
+      - CIBW_BUILD="cp36-* cp37-*"
+      - CIBW_BEFORE_BUILD="{pip} install -r requirements/wheel.txt -r requirements/test.txt"
+      - CIBW_TEST_COMMAND="py.test {project}/tests"
+      before_script:
+      - git clone https://github.com/pkgcore/pkgdist.git
+      - cp -R pkgdist/requirements/* requirements/
+      script: pkgdist/build-dist-files.sh
+      after_success:
 
-  # push tarball to github
-  - stage: deploy
-    python: 3.6
-    before_script:
-    - git clone https://github.com/pkgcore/pkgdist.git
-    - cp -R pkgdist/requirements/* requirements/
-    - pip install -r requirements/sdist.txt
-    script: python setup.py sdist
-    after_success: tar -ztf dist/*.tar.gz | sort
-    deploy:
-      provider: releases
-      api_key:
-        secure: LiWvebihdlkZ2nc0psCyLYcaGU3y2UehddndYYquYgDnKSGrpWo6uF2vg+YXzdEMeDc2BaEDrcu9OwUaCbXTuO2f2YPq9lom4GRDY1lD9kJBKXuAAArRzysijbd7HEEg119FLzkOvbHC1XW0Bi/mV37IHQ7pP2KU1rnbY5Ltby4=
-      file_glob: true
-      file: dist/*.tar.gz
-      skip_cleanup: true
-      on:
-        tags: true
+    # push tarball to github
+    - stage: deploy
+      before_script:
+      - git clone https://github.com/pkgcore/pkgdist.git
+      - cp -R pkgdist/requirements/* requirements/
+      - pip install -r requirements/sdist.txt
+      script: python setup.py sdist
+      after_success: tar -ztf dist/*.tar.gz | sort
+      deploy:
+        provider: releases
+        api_key:
+          secure: nrzYgK7cioTKg44hqEj6G5VKQO7/3kyOLbUBsncrMWCl/YohM2aQGzuubDiF6bjwioOvhlVe1lUKqwuperslUmg8vyh0zsFFeAZ6pbc2xDzkCXmwK1l0Z696mAnm6SYfAuGEmBsfkEKU97ac3NE3aQuRLDcSQeYqpVOVmWHHbIY=
+        file_glob: true
+        file: dist/*.tar.gz
+        skip_cleanup: true
+        on:
+          tags: true
