add pyproject.toml and update MANIFEST.in
Both pkgcore and snakeoil are needed to build the sdist, snakeoil for
its distutils extensions and pkgcore because it's imported by the base
module that is pulled in when generating the checks/keywords/reporters
lists that used to be statically maintained.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,9 @@
 include AUTHORS LICENSE *.py *.rst
-include tox.ini .coveragerc
+include tox.ini pyproject.toml .coveragerc
 recursive-include bin *
+recursive-include completion *
+recursive-include doc *
+recursive-include requirements *
+recursive-include src *
+recursive-include tests *
 global-exclude *.pyc *.pyo __pycache__
