travis-ci: use pkgdist ci script to initialize build env
Forces usage of dev deps for non-release builds allowing delay of
releases for deps we control to synchronize releases as wanted.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ install:
 - pip install -U pip
 before_script:
 - git clone https://github.com/pkgcore/pkgdist.git
-- cp -R pkgdist/requirements/* requirements/
-- requirements/pip.sh -rrequirements/ci.txt
+- pkgdist/ci.sh
 script: tox -e travis
 after_success:
 # upload coverage data
