--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["wheel", "setuptools", "pkgcore~=0.10.0", "snakeoil~=0.8.3"]
+requires = ["wheel", "setuptools", "snakeoil~=0.8.3", "pkgcore~=0.10.0"]
 build-backend = "setuptools.build_meta"
