--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ commands =
 	python setup.py sdist
 	python setup.py bdist_wheel
 
-# test against snakeoil/pkgcore git
+# test against latest git
 [testenv:dev]
 deps =
 	-rrequirements/dev.txt
