--- a/tests/repos/standalone/metadata/layout.conf
+++ b/tests/repos/standalone/metadata/layout.conf
@@ -3,3 +3,5 @@ cache-formats =
 thin-manifests = true
 eapis-banned = 1
 eapis-deprecated = 5
+properties-allowed = interactive live
+restrict-allowed = bindist fetch mirror test
