--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ cache:
 
 install:
 - pip install -U pip
+# install deps for perl checks
+- sudo cpanm --quiet --notest Gentoo::PerlMod::Version
 before_script:
 - git clone https://github.com/pkgcore/pkgdist.git
 - pkgdist/ci.sh
