--- a/tox.ini
+++ b/tox.ini
@@ -48,4 +48,4 @@ commands =
 # stub for travis-ci
 [testenv:travis]
 commands =
-	coverage run -p -m pytest {posargs:-v}
+	coverage run -p -m pytest {posargs:-rs -v}
