--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
   - $HOME/downloads
 
 install:
-- pip install -U pip
+- pip install -U pip tox codecov
 # install deps for perl checks
 - sudo cpanm --quiet --notest Gentoo::PerlMod::Version
 before_script:
