--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,9 @@
 [build-system]
 requires = [
 	"wheel", "setuptools",
+	"chardet",
+	"lxml",
+	"pathspec",
 	"https://github.com/pkgcore/snakeoil/archive/master.tar.gz#egg=snakeoil",
 	"https://github.com/pkgcore/pkgcore/archive/master.tar.gz#egg=pkgcore",
 ]
