--- a/requirements/pyproject.toml
+++ b/requirements/pyproject.toml
@@ -1,3 +1,10 @@
 [build-system]
-requires = ["wheel", "setuptools", "snakeoil~=0.8.3", "pkgcore~=0.10.8"]
+requires = [
+	"wheel", "setuptools",
+	"chardet",
+	"lxml",
+	"pathspec",
+	"snakeoil~=0.8.3",
+	"pkgcore~=0.10.8",
+]
 build-backend = "setuptools.build_meta"
