travi-ci: install test deps in cibuildwheel test venv
[skip ci]

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,9 +44,9 @@ jobs:
       - secure: FmQEUPLe9lBG5rT7qkrPwZsOyULX3pmKgru4bC3ZrST6ibCaAmT/TfLZ/XqHrvGeaP0vKu7daqlgrpbIkzBfxeJ+UZYL4T5F2yTLSgoigs4mGaDgt3zZvuzGEffJV+drgQVuHeEBKtT+f3BQ1UnLTKREjgRgwbIVmQ6GHKxwU1s=
       - CIBW_PLATFORM=linux
       - CIBW_BUILD="cp36-*"
-      - CIBW_BEFORE_BUILD="tar -xf /host/$HOME/downloads/\$(uname -m)/*.tar.gz -C / && pip install -r requirements/wheel.txt -r requirements/test.txt"
+      - CIBW_BEFORE_BUILD="tar -xf /host/$HOME/downloads/\$(uname -m)/*.tar.gz -C / && pip install -r requirements/wheel.txt"
       - CIBW_ENVIRONMENT="PATH=/opt/bin:\$PATH"
-      - CIBW_TEST_COMMAND="py.test {project}/tests"
+      - CIBW_TEST_COMMAND="pip install -r {project}/requirements/test.txt && py.test {project}/tests"
       before_script:
       - git clone https://github.com/pkgcore/pkgdist.git
       - pkgdist/ci.sh
