drop AUTHORS from MANIFEST.in as well
[skip ci]

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include AUTHORS LICENSE *.py *.rst
+include LICENSE *.py *.rst
 include tox.ini pyproject.toml .coveragerc .pylintrc
 recursive-include bin *
 recursive-include completion *
