travis-ci: drop unnecessary forced pip upgrade
Travis-CI now provides a new enough pip by default.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
   - $HOME/downloads
 
 install:
-- pip install -U pip tox codecov
+- pip install -U tox codecov
 # install deps for perl checks
 - sudo cpanm --quiet --notest Gentoo::PerlMod::Version
 before_script:
