--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -13,7 +13,8 @@ jobs:
         python-version: 3.6
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        # force using an older version of pip that allows URL deps in pyproject.toml
+        python -m pip install --upgrade 'pip<20'
         pip install -r requirements/dev.txt
         pip install -r requirements/docs.txt
     - name: Build sphinx documentation
