--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip tox
+        python -m pip install --upgrade pip coverage pytest
         git clone https://github.com/pkgcore/pkgdist.git
         pkgdist/ci.sh
     - name: Install non-python dependencies
@@ -27,6 +27,10 @@ jobs:
         sudo apt-get install cpanminus
         # dep for perl checks
         sudo cpanm --quiet --notest Gentoo::PerlMod::Version
-    - name: Test with pytest in tox
+    - name: Test with pytest
       run: |
-        tox -e travis
+        coverage run -p setup.py test
+    - name: Report code coverage
+      run: |
+        coverage combine
+        coverage report
