travis-ci: try to disable test runs
Except when explicitly requested via travis-ci branch.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache:
 
 stages:
   - name: test
-    if: NOT branch IN (lint, deploy)
+    if: branch = travis-ci
   - name: deploy
     if: (type = api) OR (branch = deploy) OR (tag IS present)
 
