github: try to get coverage submissions to codecov working

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,9 @@ jobs:
       run: |
         coverage combine
         coverage report
+        coverage xml
     - name: Submit code coverage to codecov
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./coverage.xml
