--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = [
 	"chardet",
 	"lxml",
 	"pathspec",
-	"https://github.com/pkgcore/snakeoil/archive/master.tar.gz#egg=snakeoil",
-	"https://github.com/pkgcore/pkgcore/archive/master.tar.gz#egg=pkgcore",
+	"snakeoil @ https://github.com/pkgcore/snakeoil/archive/master.tar.gz#egg=snakeoil",
+	"pkgcore @ https://github.com/pkgcore/pkgcore/archive/master.tar.gz#egg=pkgcore",
 ]
 build-backend = "setuptools.build_meta"
