--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,8 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip coverage pytest
-        git clone https://github.com/pkgcore/pkgdist.git
-        pkgdist/ci.sh
+        pip install -r requirements/dev.txt
     - name: Install non-python dependencies
       run: |
         sudo apt-get install cpanminus
