--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Build and upload release files
 on:
   push:
     branches: [deploy]
-    tags: ['*']
+    tags: [v*]
 
 jobs:
   build-and-deploy:
@@ -26,5 +26,7 @@ jobs:
         python setup.py bdist_wheel
 
     - name: Upload files for tagged releases
-      run: echo "Uploading files..."
+      run: |
+        python -m pip install --upgrade pip
+        pip install twine
       if: env.GIT_TAG != ''
