--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,11 @@ jobs:
     - name: Set env variables
       run: echo "::set-env name=GIT_TAG::$(git tag --points-at HEAD)"
 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements/docs.txt
+
     - name: Build release files
       run: |
         # use release version of pyproject.toml (without URL dev deps)
@@ -27,6 +32,5 @@ jobs:
 
     - name: Upload files for tagged releases
       run: |
-        python -m pip install --upgrade pip
         pip install twine
       if: env.GIT_TAG != ''
