--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,13 @@ jobs:
 
     - name: Install dependencies
       run: |
+        # pull in pkgdist dep lists
+        git clone https://github.com/pkgcore/pkgdist.git
+        cp -Rv pkgdist/requirements requirements/
+
+        # install deps required for building sdist/wheels
         python -m pip install --upgrade pip
-        pip install -r requirements/docs.txt
+        pip install -r requirements/dist.txt
 
     - name: Build release files
       run: |
@@ -30,7 +35,11 @@ jobs:
         python setup.py sdist
         python setup.py bdist_wheel
 
+        # output file info
+        tar -ztf dist/*.tar.gz | sort
+        sha512sum dist/*
+
     - name: Upload files for tagged releases
       run: |
-        pip install twine
+        echo "Uploading files..."
       if: env.GIT_TAG != ''
